frontend/app/components/LinkItem/LinkItem.scss
@keyframes ListItem--LeaveContentAnimation {
    100% {
        opacity: 0;
        margin-top: -30px;
        display: none;
    }
}

@keyframes ListItem--LeaveAnimation {
    100% {
        border: 0;
        height: 0;
        padding-top: 0;
        padding-bottom: 0;
    }
}

.LinkItem {
    border-top: 1px solid #CCC;
    padding: 20px;
    overflow: hidden;
    display: flex;

    &__Author {
        margin-right: 20px;
    }

    &__Content {
    }

    &__Title {
        font-size: 2rem;
    }

    &__TitleLink {
        color: #0B79E4;
        text-decoration: none;
    }

    &__DomainTitle {
        font-size: 1.5rem;
        color: #969696;
    }

    &__Footer {
        display: flex;
        margin-top: 10px;
        font-size: 1.3rem;
    }

    &__Column {
        width: 50%;

        &--Right {
            text-align: right;
        }
    }

    &__Saved {
        background-color: #BEBEBE;
        color: #FFF;
        line-height: 2rem;
        padding: 0 10px 0 10px;
        display: inline-block;
    }

    &__Tags {
        margin-left: 15px;
        display: inline-block;
    }

    &__Tag {
        color: #999999;
        text-decoration: none;
        margin-left: 15px;

        &:first-child {
            margin-left: 0;
        }
    }

    &__Action {
        color: #999999;
        outline: 0;
        margin-right: 15px;
        text-decoration: none;
    }

    &__Date {
        color: #999999;
    }

    &--Leave {
        background-color: #FF0000;
        color: #FFF;

        animation: ListItem--LeaveAnimation 0.6s;
        animation-iteration-count: 1;
        animation-fill-mode: forwards;

        a {
            color: #FFF;
        }

        & .LinkItem__Title,
        & .LinkItem__Footer {
            animation: ListItem--LeaveContentAnimation 0.3s;
            animation-iteration-count: 1;
            animation-fill-mode: forwards;
        }
    }
}

